[package]
name = "fem"
version = "0.1.0"
edition = "2024"
default-run = "fem"

[dependencies]
argmin = "0.11.0"
argmin-math = { version = "0.5.1", features = [
    "ndarray_latest",
    "nalgebra_latest",
] }
bytemuck = "1.25.0"
egui_plot = "=0.23.0"
nalgebra = "0.34.2"
nannou = "0.19.0"
nannou_egui = "0.19.0"
spade = "2.15.1"
sprs = "0.11.4"
svg = "0.18.0"
